--- a/erp-quimicos/src/main/webapp/css/modalbox/invajustes/formaInvAjustes.css
+++ b/erp-quimicos/src/main/webapp/css/modalbox/invajustes/formaInvAjustes.css
@@ -97,7 +97,7 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
     /*background-image:url('Imagen/ven1.png');
     background-repeat:no-repeat;*/
     width:1120px;
-    height:450px;
+    height:475px;
 /*  background-color:#D1D2D4;
     border:2px solid #313E74;*/
     border-radius:10px;
@@ -125,7 +125,7 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 .invajustes_div_three{
     /*font-family:tahoma;*/
     font-size:11px;
-    width:1110px;
+    /*width:1110px;*/
     height:48px;
     /*background-color:#D1D2D4;*/
     background-color:#e9e9e9;
@@ -137,7 +137,7 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 
 #grid_productos td{
 	height:18px;
-	text-align:center;
+	/*text-align:center;*/
 }
 
 #grid_productos input{
@@ -182,5 +182,13 @@ table tr td.grid2 {
 	border-right: 1px solid #ccc;
 	padding: 2px;
 	text-align: right;
-	vertical-align: top;
+	vertical-align: middle;
+}
+
+table tr td.grid3 {
+	background: #fff;
+	border:0px;
+	padding: 2px;
+	text-align:right;
+	vertical-align: middle;
 }
