--- a/erp-quimicos/src/main/webapp/vm/logadmviaje/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/logadmviaje/startup.vm
@@ -151,6 +151,7 @@
                                     <li><a href="#tabx-1"><strong>Viaje</strong></a></li>
                                     <li><a href="#tabx-2"><strong>Ruta</strong></a></li>
                                     <li><a href="#tabx-3"><strong>Serv. Adic.</strong></a></li>
+                                    <li><a href="#tabx-4"><strong>Precios</strong></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -284,12 +285,12 @@
 													<table border="0" class="gral">
 														<tr>
 															<td width="10"></td>
-															<td width="360" colspan="4">Observaciones</td>
+															<td width="385" colspan="4">Observaciones</td>
 															<td width="10"></td>
 														</tr>
 														<tr>
 															<td width="10"></td>
-															<td width="360"  colspan="4">
+															<td width="385"  colspan="4">
 																<textarea name="observaciones" rows="3" cols="60" style="width:360px; height:51px; resize:none;"></textarea>
 															</td>
 															<td width="10"></td>
@@ -299,7 +300,7 @@
 															<td width="50"></td>
 															<td width="180"></td>
 															<td width="30"></td>
-															<td width="100"></td>
+															<td width="125"></td>
 															<td width="10"></td>
 														</tr>
 														<tr>
@@ -310,8 +311,8 @@
 																<input type="hidden" name="alm_actual" value="0">
 															</td>
 															<td width="30"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_almacen"></div></td>
-															<td width="100" align="right">
-																<input type="button" id="btn_confirmar" value="Confirmar" style="width:100px; font-weight:bold;">
+															<td width="125" align="right">
+																
 																<input type="button" id="btn_pdf" value="PDF" style="width:100px; font-weight:bold;">
 															</td>
 															<td width="10"></td>
@@ -345,12 +346,19 @@
 																<td class="grid_busqueda" width="170"><input type="text" name="poblacion" style="width:166px;"></td>
 																<td class="grid_busqueda" width="60"><a href="#busqueda" id="buscar_pendientes">(Busqueda)</a></td>
 																<td class="grid_busqueda" width="70"></td>
-																<td class="grid_busqueda" width="70"></td>
+																
+																<td class="grid_busqueda" width="180" colspan="3" align="center"><input type="button" id="btn_confirmar" value="Confirmar" style="width:100px; font-weight:bold;"></td>
+																<!--
 																<td class="grid_busqueda" width="50"></td>
 																<td class="grid_busqueda" width="30"></td>
-																<td class="grid_busqueda" width="30"></td>
+																-->
+																<td class="grid_busqueda" width="110" colspan="3">
+																	<input type="button" id="btn_cancelar" value="Cancelar" style="width:100px; font-weight:bold;">
+																</td>
+																<!--
 																<td class="grid_busqueda" width="30"></td>
 																<td class="grid_busqueda" width="50"></td>
+																-->
 															</tr>
 															<tr>
 																<td colspan="16" height="2"></td>
@@ -468,7 +476,7 @@
 											
 											
 											<tr>
-												<td width="515" height="341" valign="top">
+												<td width="515" height="345" valign="top">
 												
 												
 													<!--Datos de la ruta seleccionada-->
@@ -593,7 +601,7 @@
 											
 											
 											<tr>
-												<td width="700" height="341" rowspan="2" valign="top">
+												<td width="700" height="345" rowspan="2" valign="top">
 													<!--Datos de los servicios adicionales-->
 													
 													<table border="0">
@@ -735,6 +743,158 @@
 										
 										
 									</div><!--tabx-3-->
+									
+									
+                                    <!--Pestaña Costeo de Venta. -->
+                                    <div id="tabx-4" class="contenidoPes" >
+										
+										<input type="hidden" name="suma_precio_venta" value="0">
+										
+										<table border="0" style="margin:0px; padding:0px;">
+											
+											<tr>
+												<td width="1160"></td>
+											</tr>
+											
+											<tr>
+												<td width="1160" class="header_grid" style="border-top:1px solid #C1DAD7; border-bottom:1px solid #C1DAD7; border-left:1px solid #FFFFFF; border-right: 1px solid #FFFFFF; background-color:#D4D3D3;">&nbsp;&nbsp;&nbsp;Precios de venta</td>
+											</tr>
+											
+											<tr>
+												<td width="1160" valign="top">
+													
+													<table border="0">
+														<thead>
+															<tr>
+																<td colspan="12" height="2"></td>
+															</tr>
+															<tr>
+																<td class="grid" style="background-color:rgb(180, 180, 180);" align="center" width="50">No.&nbsp;Clie.</td>
+																<td class="grid" style="background-color:rgb(180, 180, 180);" align="center" width="80">No.&nbsp;Carga</td>
+																<td class="grid" style="background-color:rgb(180, 180, 180);" align="center" width="80">No.&nbsp;Pedido</td>
+																<td class="grid" style="background-color:rgb(180, 180, 180);" align="center" width="70">No.&nbsp;Dest.</td>
+																<td class="grid" style="background-color:rgb(180, 180, 180);" align="center" width="190">Destinatario</td>
+																<td class="grid" style="background-color:rgb(180, 180, 180);" align="center" width="180">Poblaci&oacute;n</td>
+																<td class="grid" style="background-color:rgb(180, 180, 180);" align="center" width="60">Cant.&nbsp;Uni.</td>
+																<td class="grid" style="background-color:rgb(180, 180, 180);" align="center" width="70">Peso(kg)</td>
+																<td class="grid" style="background-color:rgb(180, 180, 180);" align="center" width="70">Volumen(m&#179;)</td>
+																<td class="grid" style="background-color:rgb(180, 180, 180);" align="center" width="75">Precio</td>
+																<td class="grid" style="background-color:rgb(180, 180, 180);" align="center" width="50">Clase</td>
+																<td class="grid" style="background-color:rgb(180, 180, 180);" align="center" width="90">Tarifa</td>
+															</tr>
+														</thead>
+														<tbody>
+															<tr>
+																<td colspan="12" height="2"></td>
+															</tr>
+															<tr>
+																<td colspan="12">
+																	<div style="overflow:scroll; overflow-x:hidden; overflow-y:auto; width:100%; height:252px; border:1px solid #C1DAD7 !important;">	
+																		 <table class="gral">
+																			  <tbody style="background-color:#ffffff;" valign="top" id="grid_precios_venta">
+																				   
+																			  </tbody>
+																		 </table>
+																	</div>
+																</td>
+															</tr>
+														</tbody>
+														<tfoot>
+															<tr>
+																<td class="grid4" width="50">&nbsp;</td>
+																<td class="grid4" width="80"></td>
+																<td class="grid4" width="80"></td>
+																<td class="grid4" width="70"></td>
+																<td class="grid4" width="190"></td>
+																<td class="grid3" width="180"></td>
+																<td style="background:#fff; border-left:1px solid #ccc; border-right:1px solid #ccc; border-bottom:1px solid #ccc; border-top:1px solid #ccc; padding:2px; text-align:right;" width="60" class="sum_uni">0.000</td>
+																<td style="background:#fff; border-left:1px solid #ccc; border-right:1px solid #ccc; border-bottom:1px solid #ccc; border-top:1px solid #ccc; padding:2px; text-align:right;" width="70" class="sum_peso">0.000</td>
+																<td style="background:#fff; border-left:1px solid #ccc; border-right:1px solid #ccc; border-bottom:1px solid #ccc; border-top:1px solid #ccc; padding:2px; text-align:right;" width="70" class="sum_vol">0.000</td>
+																<td style="background:#fff; border-left:1px solid #ccc; border-right:1px solid #ccc; border-bottom:1px solid #ccc; border-top:1px solid #ccc; padding:4px; text-align:right;" width="75" class="td_suma_costo_venta">0.00</td>
+																<td class="grid4" width="50"></td>
+																<td class="grid4" width="90"></td>
+															</tr>
+															
+															<tr>
+																<td  colspan="12">
+																	<div id="div_warning_grid" style="display:none;">
+																		<table border ="0">
+																			<tr>
+																				<td width="10"></td>
+																				<td width="530" colspan="3"><div style="color:#d41000;">&nbsp;&nbsp;Datos&nbsp;no&nbsp;validos</div></td>
+																				<td width="10"></td>
+																			</tr>
+																			<tr>
+																				<td width="10"></td>
+																				<td width="20" style="background-color:#A8A9AB; font-weight:bold;">#</td>
+																				<td width="110" style="background-color:#A8A9AB; font-weight:bold;">C&oacute;digo&nbsp;producto</td>
+																				<td width="380" style="background-color:#A8A9AB; font-weight:bold;">Descripci&oacute;n&nbsp;del&nbsp;error</td>
+																				<td width="10"></td>
+																			</tr>
+																			<tr>
+																				<td width="10"></td>
+																				<td colspan="4"> 
+																					<div align="left" style="width:540px; height:90px; overflow:scroll; overflow-x:auto; overflow-y:auto; color:#d41000;">
+																						<table id="grid_warning" border="0" style="width:530px;"">
+																							<!-- Aqui se muestran los warning
+																							style="background-color:#e7e8ea;"
+																							-->
+																						</table>
+																					</div>
+																				</td>
+																			</tr>
+																		</table>
+																	</div>
+																</td>
+															</tr>
+														</tfoot>
+													</table>
+												</td>
+											</tr>
+											
+											
+											<tr>
+												<td width="1160">&nbsp;</td>
+											</tr>
+											
+											<tr>
+												<td width="1160" class="header_grid" style="border-top:1px solid #C1DAD7; border-bottom:1px solid #C1DAD7; border-left:1px solid #FFFFFF; border-right: 1px solid #FFFFFF; background-color:#D4D3D3;">&nbsp;&nbsp;&nbsp;Resumen</td>
+											</tr>
+											<tr>
+												<td width="1160" valign="top">
+													
+													<table border="0">
+														<thead>
+															<tr>
+																<td colspan="4" height="2"></td>
+															</tr>
+															<tr>
+																<td class="grid" style="background-color:rgb(180, 180, 180);" align="center" width="100">Costo</td>
+																<td class="grid" style="background-color:rgb(180, 180, 180);" align="center" width="100">Precio</td>
+																<td class="grid" style="background-color:rgb(180, 180, 180);" align="center" width="100">Margen</td>
+																<td class="grid" style="background-color:rgb(180, 180, 180);" align="center" width="100">%&nbsp;Margen</td>
+															</tr>
+														</thead>
+														<tbody id="grid_resumen">
+															<tr>
+																<td class="content_grid2" width="100" id="td_resumen_costo">0.00</td>
+																<td class="content_grid2" width="100" id="td_resumen_precio">0.00</td>
+																<td class="content_grid2" width="100" id="td_resumen_margen">0.00</td>
+																<td class="content_grid2" width="100" id="td_resumen_porcentaje_margen">0.00</td>
+															</tr>
+														</tbody>
+													</table>
+												</td>
+											</tr>
+											
+											
+                                        </table>
+										
+										
+									</div><!--tabx-4-->
+									
+									
+									
 									
                                 </div>
                             </div>
@@ -1124,7 +1284,7 @@
 										<tr>
 											<td>
 												<div  class="titulo_detallepedido">
-													<div class="fixed column"  style="width:910px; padding-left:6px;"><strong>Detalle del Pedido</strong></div>
+													<div class="fixed column"  style="width:980px; padding-left:6px;"><strong>Detalle del Pedido</strong></div>
 													<div class="fixed column" style="width:20px; height:25px;">
 														<div id="cierra_forma_detallepedido" style="height:25px;background-image:url('../../img/modalbox/close.png'); background-color:; background-position:top; cursor:pointer; background-repeat:no-repeat;"></div>
 													</div>
@@ -1154,7 +1314,7 @@
 																	<table border="0" style="margin:0px; padding:0px;">
 																		
 																		<tr>
-																			<td width="920">
+																			<td width="995">
 																				
 																				<table  border="0" class="gral">
 																					<tr class="gral">
@@ -1231,15 +1391,15 @@
 																		
 																		
 																		<tr>
-																			<td width="920" valign="top">
+																			<td width="995" valign="top">
 																				
 																				<table class="tabla_detalle_pedido">
 																					<thead>
 																						<tr>
-																							<td colspan="9" height="2"></td>
+																							<td colspan="10" height="2"></td>
 																						</tr>
 																						<tr>
-																							<td class="grid" rowspan="2" style="background-color:rgb(180, 180, 180); border-botton:0px none;"width="25">No.</td>
+																							<td class="grid" rowspan="2" style="background-color:rgb(180, 180, 180);"width="25">No.</td>
 																							<td class="grid" rowspan="2" style="background-color:rgb(180, 180, 180);" width="90">C&oacute;digo</td>
 																							<td class="grid" rowspan="2" style="background-color:rgb(180, 180, 180);" width="280">Descripci&oacute;n</td>
 																							<td class="grid" rowspan="2" style="background-color:rgb(180, 180, 180);" width="70">Unidad</td>
@@ -1249,6 +1409,7 @@
 																							<td class="grid" style="background-color:rgb(180, 180, 180);" width="75">Volumen(m&#179;)</td>
 																							-->
 																							<td class="grid" colspan="2" style="background-color:rgb(180, 180, 180);" width="65">Rechazo</td>
+																							<td class="grid" rowspan="2" style="background-color:rgb(180, 180, 180);" width="90">Cargo</td>
 																						</tr>
 																						<tr>
 																							<!--
@@ -1261,15 +1422,16 @@
 																							<td class="grid" style="background-color:rgb(180, 180, 180);" width="80">Peso(kg)</td>
 																							<td class="grid" style="background-color:rgb(180, 180, 180);" width="75">Volumen(m&#179;)</td>
 																							<td class="grid" style="background-color:rgb(180, 180, 180);" width="65">Unidades</td>
-																							<td class="grid" style="background-color:rgb(180, 180, 180);" width="115">Tipo</td>
+																							<td class="grid" style="background-color:rgb(180, 180, 180);" width="100">Tipo</td>
+																							<!--<td class="grid" style="background-color:rgb(180, 180, 180);" width="90">Unidad</td>-->
 																						</tr>
 																					</thead>
 																					<tbody>
 																						<tr>
-																							<td colspan="9" height="2"></td>
+																							<td colspan="10" height="2"></td>
 																						</tr>
 																						<tr>
-																							<td colspan="9">
+																							<td colspan="10">
 																								<div style="overflow:scroll; overflow-x:hidden; overflow-y:auto; width:100%; height:160px; border:1px solid #C1DAD7 !important;">	
 																									 <table class="gral">
 																										  <tbody style="background-color:#ffffff;" valign="top" id="grid_productos">
@@ -1290,11 +1452,12 @@
 																							<td style="background:#fff; border-left:1px solid #ccc; border-right:1px solid #ccc; border-bottom:1px solid #ccc; border-top:1px solid #ccc; padding:2px; text-align:right;" width="80" class="det_sum_peso">0.00</td>
 																							<td style="background:#fff; border-left:1px solid #ccc; border-right:1px solid #ccc; border-bottom:1px solid #ccc; border-top:1px solid #ccc; padding:2px; text-align:right;" width="75" class="det_sum_vol">0.00</td>
 																							<td class="grid4" width="65"></td>
-																							<td class="grid4" width="115"></td>
+																							<td class="grid4" width="100"></td>
+																							<td class="grid4" width="90"></td>
 																						</tr>
 																						
 																						<tr>
-																							<td colspan="8">
+																							<td colspan="10">
 																								<div id="div_warning_grid" style="display:none;">
 																									<table border ="0">
 																										<tr>
@@ -1335,7 +1498,7 @@
 																</div>
 															</div>
 														</div>
-														<div class="fixed column" id="botones" style="width:920px; background:; text-align:right; padding-left:; position:absolute;margin-top:4px;">
+														<div class="fixed column" id="botones" style="width:990px; background:; text-align:right; padding-left:; position:absolute;margin-top:4px;">
 															<input type="submit" value="Submit" id="submit_detalle_pedido">
 															<div id="boton_cancelar_forma_detallepedido" style="width:95px; height:34px; float:right; cursor:pointer; background-image:url('../../img/modalbox/btn2.png'); background-repeat:no-repeat;"></div>
 															<div id="boton_actualizar_forma_detallepedido" style="width:95px; height:34px; float:right; cursor:pointer; background-image:url('../../img/modalbox/btn1.png'); background-repeat:no-repeat;"></div>
