--- a/erp-quimicos/src/main/webapp/vm/logvehiculotipounidades/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/logvehiculotipounidades/startup.vm
@@ -95,16 +95,72 @@
                                         <table border="0">
                                             <tr>
                                                 <td width="5"></td>
-                                                <td width="80">Tipo Unidades</td>
-                                                <td width="200"><INPUT TYPE="text" name="titulo" style="width:200px;"></td>
-                                                                                                                     <!--warning_url es el valor que esta en la funcion validar por aplicativo = url -->
+                                                <td width="110">Tipo&nbsp;de&nbsp;Unidad</td>
+                                                <td width="240"><INPUT TYPE="text" name="titulo" style="width:240px;"></td>
                                                 <td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_titulo"></div></td>
-                                                <td width="5"></td>
-                                            </tr>   
-                                            <!--</table>-->
-                                            
+                                            </tr>
+											<tr><td width="380" height="14" colspan="4"></td></tr>
+											<!--
+											<tr>
+												<td width="380" colspan="4" style="background-color:#e7e8ea; border-top:1px solid #C1DAD7; border-bottom:1px solid #C1DAD7; border-left:1px solid #FFFFFF; border-right:1px solid #FFFFFF;">Capacidades</td>
+											</tr>
+											-->
                                             <tr>
-											<table border="0">
+												<td width="380" colspan="4">
+													
+													<table border="0">
+														<thead>
+															<tr>
+																<td class="grid_head_td" width="120">Capacidad en</td>
+																<!--<td class="grid_head_td" width="190">Unidad de Medida</td>-->
+																<td class="grid_head_td" width="100">Inicial</td>
+																<td class="grid_head_td" width="120">&nbsp;Final</td>
+															</tr>
+														</thead>
+														<tbody>
+															<tr>
+																<td colspan="3" height="2"></td>
+															</tr>
+															<tr>
+																<td colspan="3">
+																	<div style="overflow:scroll; overflow-x:hidden; overflow-y:auto; height:105px; border:1px solid #C1DAD7 !important;">	
+																		<table>
+																			<tbody style="background-color: #FFFFFF;" valign="top" id="grid_productos" class="gral">
+																				<tr>
+																					<td class="content_grid1" width="118">Metro&nbsp;C&uacute;bico(m&#179;)</td>
+																					<!--<td class="content_grid2" width="190"><select name="select_um_vol" style="width:190px;"><option value="0" selected="yes">[-Unidad de Medida-]</option></select></td>-->
+																					<td class="content_grid2" width="100"><INPUT TYPE="text" name="vol_ini" style="width:98px;"></td>
+																					<td class="content_grid2" width="100"><INPUT TYPE="text" name="vol_fin" style="width:98px;"></td>
+																				</tr>
+																				<tr>
+																					<td class="content_grid1" width="118">Kilogramo(kg)</td>
+																					<!--<td class="content_grid2" width="190"><select name="select_um_kg" style="width:190px;"><option value="0" selected="yes">[-Unidad de Medida-]</option></select></td>-->
+																					<td class="content_grid2" width="100"><INPUT TYPE="text" name="kg_ini" style="width:98px;"></td>
+																					<td class="content_grid2" width="100"><INPUT TYPE="text" name="kg_fin" style="width:98px;"></td>
+																				</tr>
+																				<tr>
+																					<td class="content_grid1" width="118">Carton</td>
+																					<!--<td class="content_grid2" width="190"><select name="select_um_carton" style="width:190px;"><option value="0" selected="yes">[-Unidad de Medida-]</option></select></td>-->
+																					<td class="content_grid2" width="100"><INPUT TYPE="text" name="carton_ini" style="width:98px;"></td>
+																					<td class="content_grid2" width="100"><INPUT TYPE="text" name="carton_fin" style="width:98px;"></td>
+																				</tr>
+																				<tr>
+																					<td class="content_grid1" width="118">Tarima</td>
+																					<!--<td class="content_grid2" width="190"><select name="select_um_tarima" style="width:190px;"><option value="0" selected="yes">[-Unidad de Medida-]</option></select></td>-->
+																					<td class="content_grid2" width="100"><INPUT TYPE="text" name="tarima_ini" style="width:98px;"></td>
+																					<td class="content_grid2" width="100"><INPUT TYPE="text" name="tarima_fin" style="width:98px;"></td>
+																				</tr>
+																			</tbody>
+																		</table>
+																	</div>
+																</td>
+															</tr>
+														</tbody>
+													</table>
+													
+												</td>
+                                            </tr>
+                                            <!--
 											<tr>
 												<td width="5"></td>
 												<td width="80"></td>
@@ -121,13 +177,11 @@
 												<td width="5"></td>
 												<td width="80">Cap. m&#179;</td>
 												<td width="100"><INPUT TYPE="text" name="volumeninicio" style="width:100px;"></td>
-																													 <!--warning_url es el valor que esta en la funcion validar por aplicativo = url -->
 												<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_volumeninicio"></div></td>
 												<td width="5"></td>
 												
 												<td width="80">Cap. m&#179;</td>
 												<td width="100"><INPUT TYPE="text" name="volumenfin" style="width:100px;"></td>
-																													 <!--warning_url es el valor que esta en la funcion validar por aplicativo = url -->
 												<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_volumenfin"></div></td>
 												<td width="5"></td>
 											<tr>
@@ -137,21 +191,15 @@
 												<td width="5"></td>
 												<td width="80">Cap. Kg.</td>
 												<td width="100"><INPUT TYPE="text" name="kginicio" style="width:100px;"></td>
-																													 <!--warning_url es el valor que esta en la funcion validar por aplicativo = url -->
 												<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_kginicio"></div></td>
 												<td width="5"></td>
 												
 												<td width="80">Cap. Kg.</td>
 												<td width="100"><INPUT TYPE="text" name="kgfin" style="width:100px;"></td>
-																													 <!--warning_url es el valor que esta en la funcion validar por aplicativo = url -->
 												<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_kgfin"></div></td>
 												<td width="5"></td>
 											</tr>
-											<tr>
-												<td width="5">&nbsp;</td>
-											</tr>   
-											</table>
-											</tr>
+											-->
 										</table>
                                     </div>			
                                 </div>
