--- a/erp-quimicos/src/main/webapp/css/modalbox/logvehiculotipounidades/formaLogVehiculoTipoUnidades.css
+++ b/erp-quimicos/src/main/webapp/css/modalbox/logvehiculotipounidades/formaLogVehiculoTipoUnidades.css
@@ -98,7 +98,7 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
     /*background-image:url('Imagen/ven1.png');
     background-repeat:no-repeat;*/
 	width:520px;
-    height:280px;
+    height:330px;
 	border-radius:10px;
 	background-color:#e9e9e9;
     border:3px solid #454442;
@@ -124,7 +124,7 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 .logvehiculotipounidades_div_three{
 	/*font-family:tahoma;*/
 	font-size:11px;
-    width:509px;
+    /*width:509px;*/
     /*height:180px;*/
     background-color:#e9e9e9;
     margin-top:5px;
@@ -136,7 +136,6 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 
 #grid_productos td{
 	height:18px;
-	text-align:center;
 }
 
 #grid_productos input{
@@ -150,4 +149,33 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 .borde_oculto{
 	border-color:transparent; 
 	background:transparent;
+}
+
+table tr td.grid_head_td {
+	background: #fff;
+	padding: 2px;
+	text-align: center;
+	vertical-align: top;
+	background-color:rgb(180, 180, 180);
+	border:1px solid #C1DAD7 !important;
+	border-right: 1px solid #ccc !important;
+}
+
+
+table tr td.content_grid1 {
+	background: #fff;
+	border:1px solid #C1DAD7;
+	padding: 2px;
+	text-align:left;
+	vertical-align: center;
+	font-size: 11px;
+}
+
+table tr td.content_grid2 {
+	background: #fff;
+	border:1px solid #C1DAD7;
+	padding: 2px;
+	text-align:right;
+	vertical-align: top;
+	font-size: 11px;
 }
