--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -374,8 +374,12 @@
 													<li class="topline"><a href="../invtraspasos/startup.agnux">Traspasos</a></li>
 													<li class="topline"><a href="../invordentras/startup.agnux">Orden de Traspaso</a></li>
 													
+													<!--
 													<li class="topline"><a href="../invordpresuben/startup.agnux">Orden de Producci&oacute;n</a></li>
 													<li class="topline"><a href="../invordsubensamble/startup.agnux">Producci&oacute;n de Subensamble</a></li>
+													-->
+													<li class="topline"><a href="../invordpresuben2/startup.agnux">Pre-Orden de Producci&oacute;n</a></li>
+													<li class="topline"><a href="../invordsubensamble2/startup.agnux">Producci&oacute;n de Subensamble</a></li>
 													
 													
 													<li class="topline"><a href="../invcontrolcostos/startup.agnux">Control de Costos</a></li>
