--- a/erp-quimicos/src/main/webapp/vm/invordpresuben2/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/invordpresuben2/startup.vm
@@ -100,7 +100,7 @@
                 <input type="hidden" name="accion_proceso">
                     <div id="div_two" title="" class="invordpresuben_div_two">
                         <div class="columns on-2">
-                            <div class="fixed column" id="cierra" style="width:810px; padding-left:6px;"><strong>Orden de Subensambles</strong></div>
+                            <div class="fixed column" id="cierra" style="width:810px; padding-left:6px;"><strong>Pre-Orden de Producci&oacute;n de Subensamble</strong></div>
                             <div class="fixed column" style="width:20px; height:25px;">
                                 <div id="close" style="height:25px;background-image:url('../../img/modalbox/close.png'); background-color:; background-position:top; cursor:pointer; background-repeat:no-repeat;"></div>
                             </div>
@@ -123,7 +123,6 @@
                                     <div id="tabx-1" class="contenidoPes">
                                         <table border="0" class="gral">
 											<tr>
-												<td width="5"></td>
 												<td width="50">Folio</td>
 												<td width="150">
 													<input type="text" name="folio" style="width:90px;" readOnly="true">
@@ -131,16 +130,15 @@
 												<td width="5">&nbsp;</td>
 												<td width="85"></td>
 												<td width="85" align="right">Observaciones</td>
-												<td width="390" colspan="4" rowspan="3">
-													<textarea name="observaciones" rows="1" cols="60" style="width:390px; resize:none;"></textarea>
+												<td width="400" colspan="4" rowspan="3">
+													<textarea name="observaciones" rows="1" cols="60" style="width:390px; height:30px; resize:none;"></textarea>
 												</td>
 											</tr>
 											<tr>
-												<td colspan="10"  height="8"></td>
+												<td colspan="9"  height="8"></td>
 											</tr>
 											
 											<tr>
-												<td width="5"></td>
 												<td width="50">Almacen</td>
 												<td width="240" colspan="3">
 													<select name="select_almacen" style="width:240px;"></select>
@@ -151,11 +149,9 @@
 												<td width="85">Observaciones</td>
 												<td width="360" colspan="4"></td>
 												-->
-												
 											</tr>
 
 											<tr>
-												<td width="5" height="8"></td>
 												<td width="50" height="8"></td>
 												<td width="150" height="8"></td>
 												<td width="5" height="8"></td>
@@ -164,12 +160,10 @@
 												<td width="90" height="8"></td>
 												<td width="85" height="8"></td>
 												<td width="85" height="8"></td>
-												<td width="85" height="8"></td>
+												<td width="95" height="8"></td>
 											</tr>
 											
-											
 											<tr>
-												<td width="5"></td>
 												<td width="50">Producto</td>
 												<td width="150">
 													<input type="hidden" name="producto_id">
@@ -181,13 +175,12 @@
 												<td width="240" colspan="2"><input type="text" name="producto_descripcion" style="width:240px;"></td>
 												<td width="60"><a href="busca_producto">(Buscar)</a></td>
 												<td width="85"><input type="button" id="confirmar_orden" value="Confirmar" style="width:80px; font-weight: bold;"></td>
-												<td width="85" align="right"><input type="button" id="cancelar_orden" value="Cancelar" style="width:80px; font-weight: bold;"></td>
+												<td width="95" align="right"><input type="button" id="cancelar_orden" value="Cancelar" style="width:80px; font-weight: bold;"></td>
 											</tr>
 											<tr>
-												<td colspan="10" height="8"></td>
+												<td colspan="9" height="8"></td>
 											</tr>
 											<tr>
-												<td width="5"></td>
 												<td colspan="9" style="border-top:1px solid #C1DAD7; border-bottom:1px solid #C1DAD7; border-left:1px solid #FFFFFF; border-right:1px solid #FFFFFF;">
 													<table >
 														<thead>
@@ -199,7 +192,7 @@
 																<td class="grid" style="background-color: rgb(180, 180, 180); border-botton: 0px none;" width="100">Presentaci&oacute;n</td>
 																<td class="grid" style="background-color: rgb(180, 180, 180); border-botton: 0px none;" width="50">Densidad</td>
 																<td class="grid" style="background-color: rgb(180, 180, 180); border-botton: 0px none;" width="75">Cant.&nbsp;Kilo</td>
-																<td class="grid" style="background-color: rgb(180, 180, 180); border-botton: 0px none;" width="90">Cant.&nbsp;Litro</td>
+																<td class="grid" style="background-color: rgb(180, 180, 180); border-botton: 0px none;" width="96">Cant.&nbsp;Litro</td>
 															</tr>
 														</thead>
 													</table>
@@ -213,27 +206,25 @@
 												</td>
 											</tr>
 											<tr>
-												<td colspan="10">
+												<td colspan="9">
 													&nbsp;&nbsp;Componentes
 													<table border="0" id="grid_prodid_compid" style="display:none;" >
 													</table>
 												</td>
 											</tr>
 											<tr>
-												<td width="5"></td>
 												<td colspan="9" style="border-top:1px solid #C1DAD7; border-bottom:1px solid #C1DAD7; border-left:1px solid #FFFFFF; border-right:1px solid #FFFFFF;">
 													<table >
 														<thead>
 															<tr>
-																<td class="grid" style="background-color:rgb(180,180,180); border-botton:0px none;" width="25">#</td>
-																<td class="grid" style="background-color:rgb(180,180,180); border-botton:0px none;" width="100">C&oacute;digo</td>
-																<td class="grid" style="background-color:rgb(180,180,180); border-botton:0px none;" width="230">Nombre&nbsp;del&nbsp;Producto</td>
+																<td class="grid" style="background-color:rgb(180,180,180); border-botton:0px none;" width="102">C&oacute;digo</td>
+																<td class="grid" style="background-color:rgb(180,180,180); border-botton:0px none;" width="210">Nombre&nbsp;del&nbsp;Producto</td>
 																<td class="grid" style="background-color:rgb(180,180,180); border-botton:0px none;" width="90">Unidad</td>
-																<td class="grid" style="background-color:rgb(180,180,180); border-botton:0px none;" width="100">Pres.&nbsp;Default</td>
+																<td class="grid" style="background-color:rgb(180,180,180); border-botton:0px none;" width="90">Pres.&nbsp;Default</td>
 																<td class="grid" style="background-color:rgb(180,180,180); border-botton:0px none;" width="50">Densidad</td>
 																<td class="grid" style="background-color:rgb(180,180,180); border-botton:0px none;" width="65">Dens.&nbsp;Prom.</td>
-																<td class="grid" style="background-color:rgb(180,180,180); border-botton:0px none;" width="90">Cant.&nbsp;Kilo</td>
-																<!--<td class="grid" style="background-color:rgb(180,180,180); border-botton:0px none;" width="90">Descontar&nbsp;Inv.</td>-->
+																<td class="grid" style="background-color:rgb(180,180,180); border-botton:0px none;" width="70">Cant.&nbsp;Kilo</td>
+																<td class="grid" style="background-color:rgb(180,180,180); border-botton:0px none;" width="90">Cant.&nbsp;Litro</td>
 															</tr>
 														</thead>
 													</table>
@@ -248,7 +239,6 @@
 											</tr>
 											
 											<tr>
-												<td width="5"></td>
 												<td colspan="9">
 													<div id="div_warning_grid"  style="width:640px; height:100px; display:none;">
 														<table border="0">
