--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -425,7 +425,7 @@
 													<li class="topline"><a href="#">Control de Existencias</a></li>
 													<li class="topline"><a href="#">Kardex</a></li>
 													-->
-													<li class="topline"><a href="../repinvexis/startup.agnux">Inventario</a></li>
+													<li class="topline"><a href="../invrepexis/startup.agnux">Inventario</a></li>
 													<li class="topline"><a href="../repinvexislote/startup.agnux">Existencias en Lotes</a></li>
 													<li class="topline"><a href="../repinvexispres/startup.agnux">Existencias en Presentaciones</a></li>
 													<li class="topline"><a href="../invetiquetas/startup.agnux">Impresi&oacute;n de Etiquetas</a></li>
